--- a/package.json
+++ b/package.json
@@ -10,12 +10,10 @@
   },
   "dependencies": {
     "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "lucide-react": "^0.553.0",
-    "@google/genai": "^1.29.0",
-    "axios": "^1.7.2",
-    "react-router-dom": "^6.25.1",
-    "react-router": "^6.25.1"
+    "react-router-dom": "6.22.3",
+    "lucide-react": "0.363.0",
+    "axios": "1.6.8",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
